[package]
name = "localsend-core"
version = "0.1.0"
edition = "2021"
authors = ["Krithic Kumar krithickumarub@protonmail.com"]
license = "GPL-3.0"
keywords = ["filesharing"]
description = "Library implementing the localsend protocol"
repository = "https://github.com/notjedi/localsend-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
network-interface = "1.0.0"

rcgen = "0.10.0"
axum = {version = "0.6.10", features = ["query"]}
axum-server = { version = "0.4.6", features = ["tls-rustls"] }
tokio = { version = "1.26.0", features = ["full"] } # make sure to add io feature when removing full
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
