[package]
name = "localsend-core"
version = "0.1.0"
edition = "2021"
authors = ["Krithic Kumar krithickumarub@protonmail.com"]
license = "GPL-3.0"
keywords = ["filesharing"]
description = "Library implementing the localsend protocol"
repository = "https://github.com/notjedi/localsend-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1.37"

rcgen = "0.10.0"
network-interface = "1.0.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }

axum-macros = "0.3.7"
axum = { version = "0.6.10", features = ["query"] }
axum-server = { path = "../axum-server", package = "axum-server", features = [
    "tls-rustls",
] }
# axum-server = { version = "0.4.6", features = ["tls-rustls"] }
