[package]
name = "localsend-core"
version = "0.1.0"
edition = "2021"
authors = ["Krithic Kumar krithickumarub@protonmail.com"]
license = "GPL-3.0"
keywords = ["filesharing"]
description = "Library implementing the localsend protocol"
repository = "https://github.com/notjedi/localsend-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = "0.11"
tracing = "0.1"
network-interface = "1.0"
uuid = { version = "1.3", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.27", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

axum-macros = "0.3"
axum = { version = "0.6", features = ["query"] }
axum-server = { path = "../axum-server", package = "axum-server", features = [
    "tls-rustls",
] }
# axum-server = { version = "0.4", features = ["tls-rustls"] }
